k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sharepass
  labels:
    app: sharepass
spec:
  selector:
    matchLabels:
      app: sharepass
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sharepass
    spec:
      containers:
        - image: sharepass:local
          name: sharepass
          ports:
            - containerPort: 5000
              name: sharepass
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: sharepass
  labels:
    app: sharepass
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: sharepass
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sharepass
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    cert-manager.io/issuer-kind: ClusterIssuer
spec:
  rules:
  - host: sharepass.muehlberger.dev
    http:
      paths:
      - backend:
          service:
            name: sharepass
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: sharepass-local.muehlberger.dev
    http:
      paths:
      - backend:
          service:
            name: sharepass
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - sharepass.muehlberger.dev
    - sharepass-local.muehlberger.dev
    secretName: sharepass-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - image: postgres:13.2
          name: postgres
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-persistent-storage
              mountPath: /var/lib/postgresql
          imagePullPolicy: Always
      volumes:
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
  type: ClusterIP
